<resources>
    <string name="app_name">Integrate</string>
    <string name="text_status_connection">Status Connection</string>
    <string name="button_connect">Connect</string>
    <string name="button_refrash">Refrash</string>
    <string name="text_battery_status">Battery Status</string>
    <string name="text_network_status">Network Status</string>
    <string name="lable_backlight">Backlight</string>
    <string name="available_devices">Available devices</string>
    <string name="title_activity_connection">ActivityConnection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Settings">Settings Page</string>
    <string name="title_activity_sharing">ActivitySharing</string>
    <string name="text_serverName">PC Name</string>
    <string name="text_cb_notify_enable">Доступ к уведомлениям</string>
</resources>
