<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.dev.toxa.integrate.MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_status_connection" android:id="@+id/statusConnection"
            android:layout_alignBaseline="@+id/button_connect" android:layout_alignBottom="@+id/button_connect"
            android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_connect" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
    <Button
            android:text="@string/button_refrash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" android:id="@+id/button_refrash"/>
    <TextView
            android:text="@string/text_battery_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/button_refrash"
            android:layout_centerHorizontal="true" android:layout_marginTop="15dp" android:id="@+id/batteryStatus"/>
    <TextView
            android:text="@string/text_network_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/batteryStatus"
            android:layout_centerHorizontal="true" android:layout_marginTop="11dp" android:id="@+id/networkStatus"/>
    <Button
            android:text="battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/networkStatus"
            android:layout_alignStart="@+id/networkStatus" android:layout_marginTop="95dp" android:id="@+id/battery"/>
</RelativeLayout>
